--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
    <main>
         <section>
-            <h1>Formulario de registro</h1>
+            <h1>¡Forma parte del cambio!</h1>
             <form id="film-form">
                 <label for="name">Nombre:</label>
                 <input type="text" id="name" required>
@@ -28,7 +28,7 @@
             </form>
         </section>
         <section>
-            <h1>Empleados</h1>
+            <h1>Nuestro equipo</h1>
             <div id="users"></div>
         </section>
    </main>
