--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <main>
         <section>
             <h1>¡Forma parte del cambio!</h1>
-            <form id="film-form">
+            <form id="form">
                 <label for="name">Nombre:</label>
                 <input type="text" id="name" required>
                 <label for="email">Email:</label>
