--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
                 <input type="url" id="url" required>
                 <button id ="submit" type="submit">Enviar</button>
                 <button id="clear-cache" type="button"> Limpiar formulario</button>
-
             </form>
         </section>
         <section>
             <h1>Nuestro equipo</h1>
-            <div id="users"></div>
+            <article id="users"></article>
         </section>
    </main>
 <footer>  
